[gd_scene load_steps=5 format=2]

[ext_resource path="res://screens/title_screen.gd" type="Script" id=1]
[ext_resource path="res://components/next_screen_component.gd" type="Script" id=2]
[ext_resource path="res://screens/transition/Transition.tscn" type="PackedScene" id=3]
[ext_resource path="res://screens/transition/shrink_shadermaterial.tres" type="Material" id=5]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_type_variation = "TitleLabel"
text = "Las Aventuras
de MAX"
align = 1
valign = 1

[node name="NextScreenComponent" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="StartTransition" parent="." instance=ExtResource( 3 )]

[node name="EndTransition" parent="." instance_placeholder="res://screens/transition/Transition.tscn"]
shader_material = ExtResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
